# 221_329_Tyutichkin

./: .gitignore
avtomat/: Readme.md
avtomat/face_auth_service/: global_network.py  main.py
avtomat/passmanager/: CMakeLists.txt  authpassandlogin.cpp  authpassandlogin.h  creds_enc  creds_enc.json  form.h  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passmanager.h  process_handler.h  websocketclient.cpp  websocketclient.h
lab01/: CMakeLists.txt  authpassandlogin.ui  creds.json  creds.json.txt  creds_enc_log_pass.json  encrypt.cpp  encrypt.h  form.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passmanager.cpp  passmanager.ui
